# SwipImgToVideo

./: Cargo.toml
data/: Birth.json  Crop.json  NoSkin.json  RealName.json
src/: error.rs  main.rs  prelude.rs
src/parse_data/: mod.rs
src/swiping_img/: chunk.rs  draw.rs  mod.rs
